--- a/XIAOC3-Peripheral/platformio.ini
+++ b/XIAOC3-Peripheral/platformio.ini
@@ -12,4 +12,4 @@
 platform = espressif32
 board = seeed_xiao_esp32c3
 framework = arduino
-; upload_port = /dev/cu.usbmodem101
+upload_port = /dev/cu.usbmodem101
