--- a/XIAOC3-Controller/platformio.ini
+++ b/XIAOC3-Controller/platformio.ini
@@ -12,4 +12,6 @@
 platform = espressif32
 board = seeed_xiao_esp32c3
 framework = arduino
-upload_port = /dev/cu.usbmodem1101
+lib_deps = 
+	fastled/FastLED@^3.6.0
+	adafruit/Adafruit NeoPixel@^1.12.0
